@@ -4,21 +4,17 @@ import { useTranslation } from 'react-i18next'
 import CvCard, { CvCardListBody } from '../../components/CvCard'
 import { Colors } from '../../styles'
 import UserChallengeItem from './UserChallengeItem'
+import { NormalisedUserChallenges } from './UserChallenges.types'
 
-const mockData: any[] = [
-  { id: 'id1', name: 'A NAME', startDate: '10 April 2020', avatarUrl: '', isValidated: false },
-  { id: 'id2', name: 'B NAME', startDate: '11 May 2020', avatarUrl: '', isValidated: false },
-  { id: 'id3', name: 'C NAME', startDate: '12 June 2020', avatarUrl: '', isValidated: false },
-  { id: 'id4', name: 'D NAME', startDate: '13 July 2020', avatarUrl: '', isValidated: false },
-]
-
-interface Props {}
-const UserChallengesWidget = ({}: Props) => {
+interface Props {
+  challenges: NormalisedUserChallenges
+}
+const UserChallengesWidget = ({ challenges }: Props) => {
   const { t } = useTranslation()
 
   return (
     <CvCard
-      count={mockData.length}
+      count={challenges.ids.length}
       badgeColor={Colors.secondaryPurple}
       title={t('Completed challenges')}
       fallback={t('Have you completed any challenges yet?')}
@@ -27,7 +23,7 @@ const UserChallengesWidget = ({}: Props) => {
       }}
     >
       <CvCardListBody
-        data={mockData}
+        data={challenges}
         onViewAll={() => {
           console.log('handle view all')
         }}
